30 min before lenovo guy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(AES)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(AES main.cpp cmake-build-debug/AES_Constants.h AESEncrypt128.cpp AESEncrypt128.h)
+add_executable(AES main.cpp AES_Constants.h AESEncrypt128.cpp AESEncrypt128.h)
